2010-07-15  Patrice Dumas  <pertusus@free.fr>

	* texi2html.pl, *.pm, texi2html.init, check_texinfo.pl.in, 
	manage_i18n.pl.in, */*.init, doc/texi2html.texi: update 
	license notices to GPLv3. Cleanup a bit the copyright
	years and mark explicitly the public domain files.
	* examples/noheaders.init: don't duplicate texi2html.init.

2010-07-14  Patrice Dumas  <pertusus@free.fr>

	* texi2html.pl: obsolete texi2html specific options.
	* texi2html.init, texi2html.pl, */*.init: rename 
	$Texi2HTML::THISDOC{'program'} as 
	$Texi2HTML::THISDOC{'program_and_version'}, and have
	$Texi2HTML::THISDOC{'program'} hold the program name only.
	Remove $Texi2HTML::THISDOC{'program_authors'}.
	Simplify the comment at the beginning of html output files.
	* texi2html.pl: remove $Texi2HTML::THISDOC{'out_dir'}.
	* texi2html.pl: set more @-command related information in
	configuration variables.

2010-07-13  Patrice Dumas  <pertusus@free.fr>

	* texi2html.pl, texi2html.init, maintained_extra/mediawiki.init: 
	set NODE_FILES when split.

2010-07-12  Patrice Dumas  <pertusus@free.fr>

	* texi2html.pl, texi2html.init, formats/*: use functions to set
	configuration variables, and not perl variables. This allows
	for command-line options overriding defaults. Report from Karl.
	Warn when output file is incompatible with split or format is
	incompatible with split.
	Associate --output with 3 variables, OUT, SUBDIR and OUTFILE.
	OUT is the last value set, SUBDIR is set if the value is a directory
	or ends with a /, and OUTFILE is set in the other case.
	OUT is used if split, OUTFILE is used otherwise if set, and if 
	not set and SUBDIR is set, the file output goes in SUBDIR.
	New command line switch --set-init-variable to set a configuration 
	variable from the command line.
	DATE is now set as today, DOCUMENT_ENCODING as documentencoding,
	extension as EXTENSION and DOCUMENT_DESCRIPTION as documentdescription.
	put config variables out of Texi2HTML::THISDOC, in 