@@ -5,6 +5,8 @@
 	license notices to GPLv3. Cleanup a bit the copyright
 	years and mark explicitly the public domain files.
 	* examples/noheaders.init: don't duplicate texi2html.init.
+	* Makefile.am: install texi2any as the main program. Install
+	texi2html and makeinfo as links to texi2any.
 
 2010-07-14  Patrice Dumas  <pertusus@free.fr>
 
